--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,59 +1,35 @@
-name: ci with docker
+  name: ci with docker
 
-on:
-  push:
-    branches:
-      - 'master'
+  on:
+    push:
+      branches:
+        - 'master'
       
-jobs:
-  build:
-    runs-on: ubuntu-latest
-    steps:
-      -
-        name: Checkout
-        uses: actions/checkout@v3
-      -
-        name: Login to Docker Hub
-        uses: docker/login-action@v2
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
-      -
-        name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
-      -
-        name: Build and push
-        uses: docker/build-push-action@v4
-        with:
-          context: .
-          file: ./Dockerfile
-          push: true
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/task7:latest
-
-  jobs-2:
-    build:
-      runs-on: ubuntu-latest
-      steps:
-      -
-        name: Checkout
-        uses: actions/checkout@v3
-      -
-        name: Set up SSH key
-        with:
-          ssh-public-key: ${{ secrets.SSH_PUBLICKEY }}
-      - 
-        name: Install dependencies
-        run: |
-          sudo apt-get update && \
-          sudo apt-get install -y ansible
-      - 
-        name: Deploy app
-        env:
-          DOCKER_IMAGE: ${{ secrets.DOCKER_USERNAME }}/task7
-          DOCKER_REGISTRY_USERNAME: ${{ secrets.DOCKER_USERNAME }}
-          DOCKER_REGISTRY_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
-        run: |
-          ansible-playbook --user ${{ secrets.SSH-PubKey }} -i inventory playbook.yml
+  jobs:
+      build:
+        runs-on: ubuntu-latest
+        steps:
+        -
+          name: Checkout
+          uses: actions/checkout@v3
+        -
+          name: Set up SSH key
+          uses: webfactory/ssh-agent@v0.5.0
+          with:
+            ssh-public-key: ${{ secrets.SSH_PUBLICKEY }}
+        - 
+          name: Install dependencies
+          run: |
+            sudo apt-get update && \
+            sudo apt-get install -y ansible
+        - 
+          name: Deploy app
+          env:
+            DOCKER_IMAGE: ${{ secrets.DOCKER_USERNAME }}/task7
+            DOCKER_REGISTRY_USERNAME: ${{ secrets.DOCKER_USERNAME }}
+            DOCKER_REGISTRY_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
+          run: |
+            ansible-playbook --user ${{ secrets.SSH_PUBLICKEY }} -i inventory playbook.yml
       
   
  
