--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,5 +1,4 @@
-  name: ci with docker
-
+name: ci with docker
   on:
     push:
       branches:
@@ -16,7 +15,7 @@
           name: Set up SSH key
           uses: webfactory/ssh-agent@v0.5.0
           with:
-            ssh-public-key: ${{ secrets.SSH_PUBLICKEY }}
+            ssh-private-key: ${{ secrets.SSH_PUBLICKEY }}
         - 
           name: Install dependencies
           run: |
@@ -28,8 +27,7 @@
             DOCKER_IMAGE: ${{ secrets.DOCKER_USERNAME }}/task7
             DOCKER_REGISTRY_USERNAME: ${{ secrets.DOCKER_USERNAME }}
             DOCKER_REGISTRY_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
-          run: |
-            ansible-playbook --user ${{ secrets.SSH_PUBLICKEY }} -i inventory playbook.yml
+         
       
   
  
