--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,7 +39,7 @@ jobs one:
           name: Set up SSH key
           uses: webfactory/ssh-agent@v0.5.0
           with:
-            ssh-private-key: ${{ secrets.SSH_PUBLICKEY }}
+            ssh-private-key: ${{ secrets.SSH_PRIVATEKEY }}
         - 
           name: Install dependencies
           run: |
@@ -51,6 +51,5 @@ jobs one:
             DOCKER_IMAGE: ${{ secrets.DOCKER_USERNAME }}/task7
             DOCKER_REGISTRY_USERNAME: ${{ secrets.DOCKER_USERNAME }}
             DOCKER_REGISTRY_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
-			
-			run: |
-				ansible-playbook --user ${{ secrets.SSH_PUBLICKEY }} -i inventory playbook.yml
+	    run: |
+	    	ansible-playbook --user ${{ secrets.SSH_USER }} -i inventory playbook.yml
