--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -50,6 +50,6 @@ jobs one:
           env:
             DOCKER_IMAGE: ${{ secrets.DOCKERHUB_USERNAME }}/task7
             DOCKER_REGISTRY_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
-            DOCKER_REGISTRY_PASSWORD: ${{ secrets.DOCKERHUB_TOKEN }}
+            DOCKER_REGISTRY_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
 	    run: |
 	    	ansible-playbook --user ${{ secrets.SSH_USER }} -i inventory playbook.yml
