--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -45,4 +45,11 @@ jobs one:
           run: |
             sudo apt-get update && \
             sudo apt-get install -y ansible
-        
+        - 
+          name: Deploy app
+          env:
+            DOCKER_IMAGE: ${{ secrets.DOCKERHUB_USERNAME }}/task7
+            DOCKER_REGISTRY_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
+	        DOCKER_REGISTRY_PASSWORD: ${{ secrets.DOCKERHUB_TOKEN }}
+	        run: |
+	    	    ansible-playbook --user ${{ secrets.SSH_USER }} -i inventory playbook.yml
