--- a/host.yml
+++ b/host.yml
@@ -1,1 +1,6 @@
-localhost ansible_connection=local
+all:
+   hosts:
+     ubuntu:
+         ansible_ssh_host=192.168.73.187
+         ansible_ssh_port=8181
+         ansible_ssh_user=ermek
